<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewWallet">

        <ImageView
            android:id="@+id/backgroundwallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/viewwalletbg" />

        <Button
            android:id="@+id/backtobank"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="33dp"
            android:background="@drawable/backtobank"
            android:onClick="gobacktobank" />


        <ListView
            android:id="@+id/listviewwallet"
            android:layout_width="match_parent"
            android:layout_height="457dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="83dp"
            android:scrollbars="vertical" />

    <Button
        android:id="@+id/bank"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/backtobank"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bankcoins"
        android:onClick="bankcoins" />

    <Button
        android:id="@+id/sparetransfer"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/backtobank"
        android:layout_marginEnd="35dp"
        android:background="@drawable/movetospare"
        android:onClick="transfertosparechange" />

    <TextView
        android:id="@+id/titlewallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="Wallet"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>



